--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-pushbullet.py==0.12.0
-python-dotenv==0.21.0
-tgtg==0.14.0
-requests==2.28.2
+pushbullet-py==0.12.0
+python-dotenv==1.0.0
+tgtg==0.16.0
+requests==2.31.0
